# KJTES_OPERATE

./: .gitignore  README.md  main.py  pyproject.toml  test_localim.py  test_ocr_clicker.py
modules/: board.py  data.py  model.py  ocrclicker.py  ppdocr.py  utils.py
