[project]
name = "kjtes-operate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.37.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pip>=25.2",
    "pqdm>=0.2.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
